--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,13 +13,15 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.moveup.digital
   #baseUrl: /upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://moveup.digital/logo.png
+  name: MoveUp Status
+  introTitle: "**MoveUp Digital** - Status"
+  introMessage: ""
   navbar:
     - title: Status
       href: /
+  i18n:
+    footer: Powered by [MoveUp](https://moveup.digital)
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
