--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,16 @@ owner: maxivecchio # Your GitHub organization or username, where this repository
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
+  - name: MoveUp - Main Site
+    url: https://moveup.digital
+  - name: Casa Margot
+    url: https://casamargot.com.ar
+  - name: File Tools (Front-end)
+    url: https://filetools.cloud
+  - name: File Tools (API)
+    url: https://api.images.platform.moveup.digital
+  - name: File Tools (File Hosting)
+    url: https://testing.vps.moveup.digital    
     
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
