--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,6 +9,8 @@ sites:
     url: https://benitofernandez.com.ar
   - name: Benito Fernandez (preview)
     url: https://benito.preview.moveup.digital
+  - name: ClassHome
+    url: https://classhome.com.ar
   - name: Casa Margot
     url: https://casamargot.com.ar
   - name: SlowLiving MX
